DTO's divided in request & response
